added reader on Main

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <configuration>
           <archive>
             <manifest>
-                <mainClass>dev.rastrian.Main</mainClass>
+                <mainClass>mips.converter.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
