--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
 
 jdk:
-  - oraclejdk8
+  - openjdk8
+cache:
+  directories:
+  - $HOME/bin
 
+script: make travis-build
 sudo: false
